--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,25 +1,34 @@
-@import "mocha.css"; 
+@import "mocha.css";
 
 * {
     /* font-family: "MesloLGS Nerd Font Mono Bold"; */
-    font-family: "FiraCode Nerd Font";
-    font-size: 14px;
+    /* font-family: "FiraCode Nerd Font"; */
+    all: unset;
+    font-family: "JetBrainsMono Nerd Font Mono";
+    font-size: 13px;
     min-height: 0;
     font-weight: bold;
+    transition: none;
+    border: none;
 }
 
 window#waybar {
-    background-color: transparent;
+    background: black;
+    padding: 0 12px;
     /* color: @overlay0; */
     /* transition-property: background-color; */
     /* transition-duration: 0.1s; */
     /* border-bottom: 1px solid @overlay1; */
 }
 
+window#waybar.background>box {
+    padding: 0 10px;
+}
+
 #window {
     margin: 8px;
-    padding-left: 8;
-    padding-right: 8;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 button {
@@ -27,30 +36,40 @@ button {
     border: none;
 }
 
-button:hover {
-    background: inherit;
-    color: @mauve;
-    border-top: 2px solid @mauve;
+/**/
+/* button:hover { */
+/*     background: inherit; */
+/*     color: @mauve; */
+/*     border-top: 2px solid @mauve; */
+/* } */
+
+#workspaces {
+    padding: 2px 0;
+}
+
+#workspaces button:hover {
+    border: none;
+    color: #fff;
 }
 
 #workspaces button {
-  margin: 4px;
-    padding: 0 4px;
-  background-color: rgba(0,0,0,0.7);
-  color: #fff;
+    /* margin: 4px; */
+    padding: 0 5px;
+    /* background-color: rgba(0, 0, 0, 0.7); */
+    background-color: #333;
+    color: rgba(255, 255, 255, 0.3);
     border: none;
-    border-radius: 2.5px;
-
+    border-radius: 0;
 }
 
 #workspaces button.focused {
-    background-color: @mauve;
-    color: #fff;
+    background-color: rgba(255, 0, 0, 0.9);
+    color: white;
 }
 
 #workspaces button.active {
-    background-color: @mauve;
-    color: #fff;
+    background-color: rgba(255, 0, 0, 0.9);
+    color: white;
     text-shadow: 0 1px 0 #000;
 }
 
@@ -58,79 +77,25 @@ button:hover {
     background-color: #eb4d4b;
 }
 
-#pulseaudio,
 #clock,
-#battery,
 #cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#wireplumber,
-#tray,
 #network,
-#mode,
-#scratchpad {
-  background-color: rgba(0,0,0,0.75);
-  margin-top: 4px;
-  margin-bottom: 2px;
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 2.5px;
+#volume,
+#pulseaudio,
+#upower {
+    color: #fff;
 }
+
 #cpu {
-  color: @lavender;
-  /* border-bottom: 2px solid @lavender; */
-} 
-#clock {
-    color: @maroon;
-    /* border-bottom: 2px solid @maroon; */
+    color: red;
+    background-color: blue;
 }
 
-#clock.date {
-    color: @mauve;
-    /* border-bottom: 2px solid @mauve; */
+#cpu label {
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
-#pulseaudio {
-    color: @blue;
-    /* border-bottom: 2px solid @blue; */
-}
-
-#network {
-    color: @yellow;
-    /* border-bottom: 2px solid @yellow; */
-}
-
-#idle_inhibitor {
-    margin-right: 12px;
-    color: #7cb342;
-}
-
-#idle_inhibitor.activated {
-    color: @red;
-}
-
-#battery {
-    color: @green;
-    /* border-bottom: 2px solid @green; */
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left>widget:first-child>#workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right>widget:last-child>#workspaces {
-    margin-right: 0;
-}
-
-#custom-vpn {
-    color: @lavender;
-    border-radius: 15px;
-    padding-left: 6px;
-    padding-right: 6px;
+#cpu label:last-child {
+    color: white;
 }
